fixed modal on mobile menu+height of modals

--- a/src/sass/components/_modal-product-card.scss
+++ b/src/sass/components/_modal-product-card.scss
@@ -1,7 +1,7 @@
 .modal-product-card {
   padding: 28px;
   overflow-y: auto;
-  height: 100vh;
+  height: 600px;
   @media screen and (max-width: 479px) {
     padding-top: 60px;
   }
